# Lexoid

./: .dockerignore  .env_example  .gitignore  CHANGELOG.md  CHANGES_SUMMARY.md  CODE_OF_CONDUCT.md  Dockerfile  Makefile  README.md  TESTING_GUIDE.md  VERTEX_AI_MIGRATION_GUIDE.md  VERTEX_AI_QUICKSTART.md  docker-compose.yml  pdf_parser.py  prompt_optimizer.py  prompt_templates.py  pyproject.toml
.github/workflows/: deploy_docs.yml
docs/: api.rst  benchmark.csv  benchmark.rst  cli.rst  conf.py  contributing.rst  index.rst  installation.rst  requirements.txt  update_benchmarks.py  vertex_ai_setup.md
examples/: example_notebook.ipynb  example_notebook_colab.ipynb  example_notebook_latex.ipynb  example_notebook_reference_highlight.ipynb  example_notebook_schema.ipynb  example_vertex_ai.py
examples/inputs/: sample_test.txt
examples/outputs/: benchmark.md  costco_bill.md  cvs_coupon.md  grocery_bill.md  medical_invoice_sample1.md  medical_travel_request_OWCP_957.md  table.md  test_2.md  test_3.md  test_4.md  test_5.md
lexoid/: __main__.py  api.py  cli.py  doc_parser.py
lexoid/core/: conversion_utils.py  ghost.py  llm_selector.py  prompt_templates.py  utils.py
lexoid/parsers/: llm_parser.py
pdf_parser/: pdf_parser.py  prompt_templates.py
skills/lexoid-cli/: SKILL.md
skills/lexoid-python/: SKILL.md
tests/: api_cost_mapping.json  benchmark.py  benchmark_utils.py  env_template  plot_document_results.py  recreate_results_csv.py  results.csv  test_cli.py  test_ghost.py  test_llm_parse.py  test_parser.py  test_vertex_ai.py  update_benchmarks.py
(+9 files in other folders)
