[tool.poetry]
name = "lexoid"
version = "0.1.2"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
google-generativeai = "^0.8.1"
pymupdf4llm = "^0.0.17"
openai = "^1.47.0"
pikepdf = "^9.3.0"
pdfplumber = "^0.11.4"
pandas = "^2.2.3"
tabulate = "^0.9.0"
bs4 = "^0.0.2"
markdownify = "^0.13.1"
pyqt5 = "^5.15.11"
pyqtwebengine = "^5.15.7"
camelot-py = "^0.11.0"
opencv-python = "^4.10.0.84"
pypdfium2 = "^4.30.0"
markdown = "^3.7"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
python-dotenv = "^1.0.0"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
